first deployment focus

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI Prompt Library - Share and discover effective prompts for various AI models" />
     <title>AI Prompt Library</title>
+    <!-- Google AdSense -->
+    <script>
+      window.onload = function() {
+        console.log('Window loaded, checking AdSense...');
+        if (!window.adsbygoogle) {
+          console.warn('AdSense not found on window load');
+        }
+      };
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6558224888596733" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
