improve mobile responsivness and like button behavior

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>PromptLab – Discover, Create & Share the Best AI Prompts</title>
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="PromptLab – Discover, Create & Share the Best AI Prompts" />
+    <meta property="og:description" content="Explore the ultimate prompt library. Create, vote, and share top prompts for ChatGPT, Claude, and other AI tools. Join the community shaping better AI interactions." />
+    <meta property="og:image" content="/promptlab-og-image.png" />
+    <meta property="og:url" content="https://prompt-lab.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="PromptLab" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PromptLab – Discover, Create & Share the Best AI Prompts" />
+    <meta name="twitter:description" content="A curated prompt library for AI enthusiasts. Vote on top prompts, create your own, and explore what the community is using." />
+    <meta name="twitter:image" content="/promptlab-og-image.png" />
+    <meta name="twitter:site" content="@PromptLab00" />
+
+    <!-- Optional: JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "PromptLab",
+      "url": "https://prompt-lab.app",
+      "description": "Discover, create, share, and vote on the best AI prompts. Perfect for ChatGPT, Claude, Gemini, and other LLMs.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "PromptLab",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "/promptlab-og-image.png"
+        }
+      }
+    }
+    </script>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/11.6.0/firebase-app-compat.js"></script>
